tests/snapshots/test_runner__tests__compiler__transpile__pattern_matching_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let tail2<A>
  : | [A] => [A]
  = | xs =>
    let [_ ...[_ ...tail2]] = xs
    tail2

do [1 2 3].tail2.print
do [].tail2.print

============
EXIT CODE
============
0

============
STDOUT
============
[ 3 ]
[]

============
STDERR
============
