tests/snapshots/test_runner__tests__compiler__transpile__record_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = \_ => 123
let x = {x = null.foo(), y = "456"}

do x.print()

============
EXIT CODE
============
0

============
STDOUT
============
{ x: 123, y: '456' }

============
STDERR
============
