tests/snapshots/test_runner__tests__compiler__transpile__recursive_function_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Nat {
  Zero,
  Succ(Nat)
}

let add = (x: Nat, y: Nat): Nat =>
  switch({x, y}) {
    case {x: Zero, y: n}:
      n
    case {x: Succ(n), y: a}:
      Succ(n.add(a))
  }


{
  let one = Succ(Zero)
  one.add(one).print()
}

============
EXIT CODE
============
0

============
STDOUT
============
{ '$': 'Succ', _: { '$': 'Succ', _: { '$': 'Zero', _: null } } }

============
STDERR
============
