tests/snapshots/test_runner__tests__compiler__transpile__shorthand_record_update_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let match = <T, U>(t: T, f: (t: T) => U): U => t.f()

{ x: 2 }.match(.{ x: 3 }).print

============
EXIT CODE
============
0

============
STDOUT
============
{ '$x': 3 }

============
STDERR
============
