tests/snapshots/test_runner__tests__compiler__transpile__single_dispatch_shadowing_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo
  : | String => String
  = | String => "Hello"

do
  let foo = | _ => "World"
  "x".foo().print()

do "x".foo().print()

============
EXIT CODE
============
0

============
STDOUT
============
World
Hello

============
STDERR
============
